<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail_activity.overview.OverviewFragment">

    <ImageView
        android:id="@+id/main_image_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_view"
        app:layout_constraintEnd_toEndOf="@+id/main_image_view"
        app:layout_constraintStart_toStartOf="@+id/main_image_view"
        app:layout_constraintTop_toTopOf="@+id/main_image_view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        tools:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_view"
        app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        tools:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/likes_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:textColor="@color/darkGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_view"
        tools:text="@string/title" />

    <ImageView
        android:id="@+id/vegetarian_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image"
        app:tint="@color/darkGray"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/vegetarian_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_check_view"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_check_view"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_check_view" />

    <ImageView
        android:id="@+id/vegan_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image"
        app:tint="@color/darkGray"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_check_view"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_check_view" />

    <TextView
        android:id="@+id/vegan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_check_view"
        app:layout_constraintStart_toEndOf="@+id/vegan_check_view"
        app:layout_constraintTop_toTopOf="@+id/vegan_check_view" />

    <ImageView
        android:id="@+id/dairy_free_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/image"
        app:tint="@color/darkGray"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_text"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_text"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_text" />

    <TextView
        android:id="@+id/dairy_free_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_check_view"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_check_view"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_check_view" />

    <ImageView
        android:id="@+id/gluten_free_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image"
        app:tint="@color/darkGray"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/dairy_free_check_view"
        app:layout_constraintTop_toBottomOf="@+id/dairy_free_check_view" />

    <TextView
        android:id="@+id/gluten_free_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_check_view"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_check_view"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_check_view" />

    <ImageView
        android:id="@+id/healthy_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:tint="@color/darkGray"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_text"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_text"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_text" />

    <TextView
        android:id="@+id/healthy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_check_view"
        app:layout_constraintStart_toEndOf="@+id/healthy_check_view"
        app:layout_constraintTop_toTopOf="@+id/healthy_check_view" />

    <ImageView
        android:id="@+id/cheap_check_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image"
        app:tint="@color/darkGray"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintStart_toStartOf="@+id/healthy_check_view"
        app:layout_constraintTop_toBottomOf="@+id/healthy_check_view" />

    <TextView
        android:id="@+id/cheap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_check_view"
        app:layout_constraintStart_toEndOf="@+id/cheap_check_view"
        app:layout_constraintTop_toTopOf="@+id/cheap_check_view" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_check_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/summary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="TextView"
                android:textSize="16sp"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>